# New-project

./: .gitignore  CMakeLists.txt  README.md
apps/WordEditor/: CMakeLists.txt
apps/WordEditor/src/: DocumentController.cpp  DocumentController.hpp  FormatToolbar.cpp  FormatToolbar.hpp  ImageStore.cpp  ImageStore.hpp  MainWindow.cpp  MainWindow.hpp  QtDocumentMapper.cpp  QtDocumentMapper.hpp  main.cpp
cmake/: CppWordKitConfig.cmake.in
examples/: CMakeLists.txt  fill_table.cpp  read_text.cpp  replace_text.cpp
include/cppwordkit/: CppWordKit.hpp  DocxTemplate.hpp  Error.hpp  Template.hpp  Types.hpp  WordDocument.hpp  XmlPart.hpp
include/cppwordkit/core/: CppWordKitCore.hpp  Error.hpp  Types.hpp  WordDocument.hpp  XmlPart.hpp
include/cppwordkit/tpl/: CppWordTpl.hpp  DocxTemplate.hpp  Template.hpp
src/: Detail.hpp  DocxTemplate.cpp  OpenXmlPackage.cpp  OpenXmlPackage.hpp  Template.cpp  WordDocument.cpp  XmlPart.cpp  ZipArchive.cpp  ZipArchive.hpp
tests/: CMakeLists.txt  TemplateTests.cpp  WordDocumentTests.cpp  XmlPartTests.cpp
